# gtm-scraper

./: .gitignore  README.md  pyproject.toml
db/: docker-compose.yml  scaffold.py
gtm_scraper/: get_all.py  run.py
